--- a/public/css/my-app.css
+++ b/public/css/my-app.css
@@ -62,7 +62,7 @@ i.icon.icon-form-moon {
   background-image: url("../lib/framework7/img/i-form-moon-my.svg");
 }
 body{
-	max-width: 480px;
+	max-width: 470px;
 	margin: 0 auto;
 }
 h3{
@@ -437,4 +437,41 @@ footer p{
 	border-radius: 100%;
 	margin-right: 1rem;
 }
-
+.swiper-about{
+	height: 100%;
+}
+.about-item{
+ 	height: 100%;
+	margin-bottom: 50px;
+}
+.about-title{
+	width: 100%;
+	text-align: center;
+}
+.about-step li{
+	word-break: break-all;
+	word-wrap:break-word;
+}
+.siteabout{
+	font-size: 1rem;
+}
+.siteabout ol{
+	padding-start: 35px;
+	margin-end: 20px;
+	-moz-padding-start: 35px;
+	-moz-margin-end: 20px;
+	-ms-padding-start: 35px;
+	-ms-margin-end: 20px;
+	-webkit-padding-start: 35px;
+	-webkit-margin-end: 20px;
+}
+.about-step .content-block{
+	margin: 10px 0;
+	padding: 0;
+}
+#lunbo img{
+	max-height: 230px;
+}
+.toolbar.messagebar textarea{
+	top: 4.5px !important;
+}
