repair login bug in moble phone show

--- a/public/css/my-app.css
+++ b/public/css/my-app.css
@@ -288,8 +288,8 @@ footer p{
   line-height: 170px;
 }
 .welcomescreen-container .welcomescreen-text a{
-  color: #fff;
-  text-decoration: underline;
+  color: #cddc39;
+  text-decoration: none;
 }
 .tutorial-close-btn {
   background: #fff;
