--- a/views/index.ejs
+++ b/views/index.ejs
@@ -462,21 +462,21 @@
 			var exports = {}; 
 			document.addEventListener("DOMContentLoaded", function(event) {
 				// Initialize app
-				var fw7App = new Framework7(),
-					fw7ViewOptions = { 
+				var fw7App = new Framework7();
+				var fw7ViewOptions = { 
 						dynamicNavbar: true,
 						domCache: true,
 						precompileTemplates: true,
 						animateNavBackIcon: true,
 						template7Pages: true,
 						template7Data: context
-					},  
-					mainView = fw7App.addView('.view-main', fw7ViewOptions),
-					$$ = Framework7.$,
-					ipc = new myapp.appIndex(fw7App, $$),
-					<% if(user == -1) { %>
-					welcome = new myapp.welcome(fw7App, $$);
-					<% } %>
+					};  
+				var mainView = fw7App.addView('.view-main', fw7ViewOptions);
+				var $$ = Framework7.$;
+				var ipc = new myapp.appIndex(fw7App, $$);
+				<% if(user == -1) { %>
+				var welcome = new myapp.welcome(fw7App, $$);
+				<% } %>
 			}); 
 			return exports;
 		}());
